<?xml version="1.0"?>
<package format="2">
  <name>hokuyo_control_server</name>
  <version>0.1.0</version>
  <description>HTTP control and telemetry bridge for ROS robots (Indigo + Noetic).</description>

  <maintainer email="todo@example.com">TODO</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rospy</depend>

  <exec_depend>face_detector_msgs</exec_depend>
  <exec_depend>kobuki_msgs</exec_depend>
  <exec_depend>sound_play</exec_depend>

  <export />
</package>
